--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -5,29 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
-    <title>Galaxy-Furnitures</title>
+    <link href="/images/icon.jpg" rel="icon" />
+    <title>Galaxy Furniture Factory</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+    <header class="bg-info">
+        <div class="row">
+            <a class="navbar-brand" href="index.html">
                 <img src="/images/icon.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                <b>GALAXY-FURNITURES</b>    
+                <b>GALAXY FURNITURE FACTORY</b>    
             </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav mx-auto">
-              <a class="nav-link btn  mx-1" aria-current="page" href="#">HOME</a>
-              <a class="nav-link btn  mx-1" href="#">PRODUCTS</a>
-              <a class="nav-link btn  mx-1" href="#">SERVICES</a>
-              <a class="nav-link btn  mx-1" href="#" tabindex="-1" aria-disabled="true">CONTACT</a>
-            </div>
-          </div>
         </div>
-      </nav>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img src="/images/icon.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                    <b>GALAXY FURNITURE FACTORY</b>    
+                </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav mx-auto">
+                  <a class="nav-link btn  mx-1" aria-current="page" href="#">HOME</a>
+                  <a class="nav-link btn  mx-1" href="#">PRODUCTS</a>
+                  <a class="nav-link btn  mx-1" href="#">SERVICES</a>
+                  <a class="nav-link btn  mx-1" href="#" tabindex="-1" aria-disabled="true">CONTACT</a>
+                </div>
+              </div>
+            </div>
+        </nav>
+    </header>
+    
     
 
 
