--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container-fluid p-3 clr-prim ">
         <div class="box">
             <!--Slider-->
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide p-5" data-ride="carousel">
                 <ol class="carousel-indicators">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -31,13 +31,13 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="/images/sofa3.jpg" alt="First slide">
+                    <img class="d-block w-100" src="/images/back2.jpg" alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="/images/sofa1.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="/images/back3.jpg" alt="Second slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="/images/sofa4.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="/images/back4.jpg" alt="Third slide">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
