--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
             <div class="content">
                 <h1>GALAXY FUNITURE FACTORY</h1>
                 <p>We build essential items for your home</p>
-                <button class="btn">MORE</button>
+                <a href="#carouselExampleIndicators">
+                    <button class="btn">MORE</button>
+                </a>
+                
             </div>
         </div>
     </div>
