--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="content">
                 <h1>GALAXY FUNITURE FACTORY</h1>
                 <p>We build essential items for your home</p>
-                <a href="#carouselExampleIndicators">
+                <a href="#second-section">
                     <button class="btn">MORE</button>
                 </a>
                 
@@ -25,6 +25,15 @@
 
     <div class="container-fluid p-3 clr-prim ">
         <div class="box">
+            <!--Changing text-->
+            <div class="change-text-area">
+                HAi
+                <div>
+                    Changing text content 1
+                </div>
+                Hello
+            </div>
+            <!--Changing text-->
             <!--Slider-->
             <div id="carouselExampleIndicators" class="carousel slide p-5" data-ride="carousel">
                 <ol class="carousel-indicators">
