--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="change-text-area">
                 HAi
                 <div id="change-text">
-                    Changing text content 1
+                    "First content" , "Second content", "Third content"
                 </div>
                 Hello
             </div>
