Content changing set..!Need to add some design properties

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <div class="box">
             <!--Changing text-->
             <div class="change-text-area">
-                HAi
+                We Are,
                 <div id="change-text">
-                    "First content" , "Second content", "Third content"
+                    First content
                 </div>
-                Hello
+                
             </div>
             <!--Changing text-->
             <!--Slider-->
