--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
   rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css"></link>
     <title>Galaxy Furniture Factory</title>
 </head>
@@ -15,7 +17,6 @@
         <div class="content-area">
             <div class="content">
                 <h1>GALAXY FUNITURE FACTORY</h1>
-                <p>We build essential items for your home</p>
                 <p>The Brand You Trust</p>
                 <a href="#second-section">
                     <button class="btn">MORE</button>
@@ -84,13 +85,23 @@
             <!--Slider-->
         </div>
 
-        <div class="box">
-            <p>
-              Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem 
-              Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem 
-              Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem 
-              
-            </p>
+            <div class="box">
+                <div class="container">
+                    <div class="intro">
+                        <h2 class="text-center">Lightbox Gallery</h2>
+                        <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+                    </div>
+                    <div class="row photos">
+                        <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="/images/back3.jpg" data-lightbox="photos"><img class="img-fluid" src="/images/back3.jpg"></a></div>
+                        <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="/images/back2.jpg" data-lightbox="photos"><img class="img-fluid" src="/images/back2.jpg"></a></div>
+                        <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="/images/back3.jpg" data-lightbox="photos"><img class="img-fluid" src="/images/back3.jpg"></a></div>
+                        <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="/images/back4.jpg" data-lightbox="photos"><img class="img-fluid" src="/images/back4.jpg"></a></div>
+                        <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="/images/back4.jpg" data-lightbox="photos"><img class="img-fluid" src="/images/back4.jpg"></a></div>
+                        <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="/images/back4.jpg" data-lightbox="photos"><img class="img-fluid" src="/images/back4.jpg"></a></div>
+                    </div>
+                </div>
+            </div>
+        
         </div>
         <div class="box">
             <p>
@@ -242,5 +253,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
+
 </body>
 </html>
