--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             <div class="box">
                 <div class="container">
                     <div class="intro">
-                        <h2 class="text-center">Lightbox Gallery</h2>
-                        <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+                        <h2 class="text-center clr-prim">GALLERY</h2>
+                        <p class="text-center">Check our valuble products.</p>
                     </div>
                     <div class="row photos">
                         <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="/images/back3.jpg" data-lightbox="photos"><img class="img-fluid" src="/images/back3.jpg"></a></div>
