--- a/index.html
+++ b/index.html
@@ -85,24 +85,45 @@
             <!--Slider-->
         </div>
 
-            <div class="box">
-                <div class="container">
-                    <div class="intro">
-                        <h2 class="text-center clr-prim">GALLERY</h2>
-                        <p class="text-center">Check our valuble products.</p>
-                    </div>
-                    <div class="row photos">
-                        <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="/images/back3.jpg" data-lightbox="photos"><img class="img-fluid" src="/images/back3.jpg"></a></div>
-                        <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="/images/back2.jpg" data-lightbox="photos"><img class="img-fluid" src="/images/back2.jpg"></a></div>
-                        <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="/images/back3.jpg" data-lightbox="photos"><img class="img-fluid" src="/images/back3.jpg"></a></div>
-                        <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="/images/back4.jpg" data-lightbox="photos"><img class="img-fluid" src="/images/back4.jpg"></a></div>
-                        <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="/images/back4.jpg" data-lightbox="photos"><img class="img-fluid" src="/images/back4.jpg"></a></div>
-                        <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="/images/back4.jpg" data-lightbox="photos"><img class="img-fluid" src="/images/back4.jpg"></a></div>
-                    </div>
+        <div class="box p-5">    
+            <div class="intro">
+                <h2 class="text-center clr-prim">GALLERY</h2>
+                <p class="text-center">Check our valuble products.</p>
+            </div>
+            <div class="row photos">
+                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                    <a href="/images/back3.jpg" data-lightbox="photos">
+                        <img class="img-fluid" src="/images/back3.jpg">
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                    <a href="/images/back2.jpg" data-lightbox="photos">
+                        <img class="img-fluid" src="/images/back2.jpg">
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                    <a href="/images/back3.jpg" data-lightbox="photos">
+                        <img class="img-fluid" src="/images/back3.jpg">
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                    <a href="/images/back4.jpg" data-lightbox="photos">
+                        <img class="img-fluid" src="/images/back4.jpg">
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                    <a href="/images/back4.jpg" data-lightbox="photos">
+                        <img class="img-fluid" src="/images/back4.jpg">
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                    <a href="/images/back4.jpg" data-lightbox="photos">
+                        <img class="img-fluid" src="/images/back4.jpg">
+                    </a>
                 </div>
             </div>
-        
         </div>
+
         <div class="box">
             <p>
               Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem 
