--- a/index.html
+++ b/index.html
@@ -121,6 +121,16 @@
                         <img class="img-fluid" src="/images/back4.jpg">
                     </a>
                 </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                    <a href="/images/back2.jpg" data-lightbox="photos">
+                        <img class="img-fluid" src="/images/back2.jpg">
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                    <a href="/images/back2.jpg" data-lightbox="photos">
+                        <img class="img-fluid" src="/images/back2.jpg">
+                    </a>
+                </div>
             </div>
         </div>
 
