Images resized , Shadow added , Gallery modified

--- a/index.html
+++ b/index.html
@@ -93,42 +93,62 @@
             <div class="row photos">
                 <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back3.jpg" data-lightbox="photos">
-                        <img class="img-fluid" src="/images/back3.jpg">
+                        <img class="img-fluid img-shadow" src="/images/back3.jpg">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back2.jpg" data-lightbox="photos">
-                        <img class="img-fluid" src="/images/back2.jpg">
+                        <img class="img-fluid img-shadow" src="/images/back2.jpg">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back3.jpg" data-lightbox="photos">
-                        <img class="img-fluid" src="/images/back3.jpg">
+                        <img class="img-fluid img-shadow" src="/images/back3.jpg">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back4.jpg" data-lightbox="photos">
-                        <img class="img-fluid" src="/images/back4.jpg">
+                        <img class="img-fluid img-shadow" src="/images/back4.jpg">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back4.jpg" data-lightbox="photos">
-                        <img class="img-fluid" src="/images/back4.jpg">
+                        <img class="img-fluid img-shadow" src="/images/back4.jpg">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back4.jpg" data-lightbox="photos">
-                        <img class="img-fluid" src="/images/back4.jpg">
+                        <img class="img-fluid img-shadow" src="/images/back4.jpg">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back2.jpg" data-lightbox="photos">
-                        <img class="img-fluid" src="/images/back2.jpg">
+                        <img class="img-fluid img-shadow" src="/images/back2.jpg">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back2.jpg" data-lightbox="photos">
-                        <img class="img-fluid" src="/images/back2.jpg">
+                        <img class="img-fluid img-shadow" src="/images/back2.jpg">
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                    <a href="/images/back3.jpg" data-lightbox="photos">
+                        <img class="img-fluid img-shadow" src="/images/back3.jpg">
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                    <a href="/images/back4.jpg" data-lightbox="photos">
+                        <img class="img-fluid img-shadow" src="/images/back4.jpg">
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                    <a href="/images/back4.jpg" data-lightbox="photos">
+                        <img class="img-fluid img-shadow" src="/images/back4.jpg">
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                    <a href="/images/back4.jpg" data-lightbox="photos">
+                        <img class="img-fluid img-shadow" src="/images/back4.jpg">
                     </a>
                 </div>
             </div>
