--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <!--Slider-->
         </div>
 
+        <!--Gallery-->
         <div class="box p-5">    
             <div class="intro">
                 <h2 class="text-center clr-prim">GALLERY</h2>
@@ -153,6 +154,7 @@
                 </div>
             </div>
         </div>
+        <!--Gallery-->
 
         <div class="box">
             <p>
@@ -170,32 +172,32 @@
     <!-- Section: Social media -->
     <section class="mb-4">
       <!-- Facebook -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      <a class="btn btn-outline-light btn-floating m-1 ic" href="#!" role="button"
         ><i class="fab fa-facebook-f"></i
       ></a>
 
       <!-- Twitter -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      <a class="btn btn-outline-light btn-floating m-1 ic" href="#!" role="button"
         ><i class="fab fa-twitter"></i
       ></a>
 
       <!-- Google -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      <a class="btn btn-outline-light btn-floating m-1 ic" href="#!" role="button"
         ><i class="fab fa-google"></i
       ></a>
 
       <!-- Instagram -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      <a class="btn btn-outline-light btn-floating m-1 ic" href="#!" role="button"
         ><i class="fab fa-instagram"></i
       ></a>
 
       <!-- Linkedin -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      <a class="btn btn-outline-light btn-floating m-1 ic" href="#!" role="button"
         ><i class="fab fa-linkedin-in"></i
       ></a>
 
       <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      <a class="btn btn-outline-light btn-floating m-1 ic" href="#!" role="button"
         ><i class="fab fa-github"></i
       ></a>
     </section>
