--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
         </div>
         <!--Gallery-->
 
+        <!--Contact-->
+        <div class="box">
+            
+        </div>
+        
+        <!--Contact-->
         <div class="box">
             <p>
               Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem 
