Marquee Details and copyright reserved properties added..

--- a/index.html
+++ b/index.html
@@ -307,8 +307,9 @@
 
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2020 Copyright:
-    <a class="text-white" href="https://wovenwebs.ml">wovenwebs</a>
+    © 2021 Galaxy Furniture Factory. All Rights Reserved.
+Designed by 
+    <a class="text-danger" href="https://wovenwebs.ml">wovenwebs.ml</a>
   </div>
   <!-- Copyright -->
 </footer>
