floating whatsapp icon added

--- a/index.html
+++ b/index.html
@@ -179,9 +179,12 @@
             </p>
         </div>
     </div>
+
+
 <!-- Footer -->
 <footer class="bg-dark text-center text-white">
   <!-- Grid container -->
+  
   <div class=" p-4">
     <!-- Section: Social media -->
     <section class="mb-4">
@@ -312,6 +315,12 @@ Designed by
     <a class="text-danger" href="https://wovenwebs.ml">wovenwebs.ml</a>
   </div>
   <!-- Copyright -->
+
+  <!-- whatapp -->
+  <p><div class="whatsapp">
+    <a href="https://api.whatsapp.com/send?phone=91-----" target="_blank">    
+    <h5><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></h5></a>
+                    </div></p>
 </footer>
 <!-- Footer -->
     
@@ -322,6 +331,6 @@ Designed by
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
-
+    <script src="https://use.fontawesome.com/aa1200a69d.js"></script>
 </body>
 </html>
