gallery style changed

--- a/index.html
+++ b/index.html
@@ -100,62 +100,62 @@
                 <p class="text-center">Check our valuble products.</p>
             </div>
             <div class="row photos">
-                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back3.jpg" data-lightbox="photos">
                         <img class="img-fluid img-shadow" src="/images/back3.jpg">
                     </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back2.jpg" data-lightbox="photos">
                         <img class="img-fluid img-shadow" src="/images/back2.jpg">
                     </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back3.jpg" data-lightbox="photos">
                         <img class="img-fluid img-shadow" src="/images/back3.jpg">
                     </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back4.jpg" data-lightbox="photos">
                         <img class="img-fluid img-shadow" src="/images/back4.jpg">
                     </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back4.jpg" data-lightbox="photos">
                         <img class="img-fluid img-shadow" src="/images/back4.jpg">
                     </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back4.jpg" data-lightbox="photos">
                         <img class="img-fluid img-shadow" src="/images/back4.jpg">
                     </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back2.jpg" data-lightbox="photos">
                         <img class="img-fluid img-shadow" src="/images/back2.jpg">
                     </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back2.jpg" data-lightbox="photos">
                         <img class="img-fluid img-shadow" src="/images/back2.jpg">
                     </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back3.jpg" data-lightbox="photos">
                         <img class="img-fluid img-shadow" src="/images/back3.jpg">
                     </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back4.jpg" data-lightbox="photos">
                         <img class="img-fluid img-shadow" src="/images/back4.jpg">
                     </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back4.jpg" data-lightbox="photos">
                         <img class="img-fluid img-shadow" src="/images/back4.jpg">
                     </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item p-3">
+                <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
                     <a href="/images/back4.jpg" data-lightbox="photos">
                         <img class="img-fluid img-shadow" src="/images/back4.jpg">
                     </a>
@@ -319,7 +319,7 @@ Designed by
   <!-- whatapp -->
   <p><div class="whatsapp">
     <a href="https://api.whatsapp.com/send?phone=91-----" target="_blank">    
-    <h5><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></h5></a>
+    <h5><i class="fa fa-whatsapp fa-lg" aria-hidden="true"></i></h5></a>
                     </div></p>
 </footer>
 <!-- Footer -->
@@ -332,5 +332,6 @@ Designed by
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
     <script src="https://use.fontawesome.com/aa1200a69d.js"></script>
+    
 </body>
 </html>
