floating whatsapp pbm fixed

--- a/index.html
+++ b/index.html
@@ -304,9 +304,10 @@
    
   </div>
 </div>
-<div class="whatsapp">
-  <a href="https://api.whatsapp.com/send?phone=91-----" target="_blank">    
-  <h5><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></h5></a>
+<div>
+  <a href="https://api.whatsapp.com/send?phone=51955081075&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+    </a>
                   </div>
           
 
@@ -333,10 +334,7 @@ Designed by
   <!-- Copyright -->
 
   <!-- whatapp -->
-  <p><div class="whatsapp">
-    <a href="https://api.whatsapp.com/send?phone=91-----" target="_blank">    
-    <h5><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></h5></a>
-                    </div></p>
+
 </footer>
 <!-- Footer -->
     
