--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             </svg>
             <!--Changing text-->
             <div class="change-text-area">
+                <b><span></span>
                 <span></span>
                 <span></span>
-                <span></span>
-                We Are,
+                </b>
                 <div id="change-text">
-                    First content
+                    17000 രൂപ മുതൽ എല്ലാത്തരം ഫർണിച്ചറുകളുടെയും വിശാലമായ കളക്ഷൻസ്
                 </div>
                 
             </div>
@@ -195,7 +195,8 @@
     </div>
 
 
-<!-- Footer -->
+<div>
+    <!-- Footer -->
 <footer class="bg-dark text-center text-white">
   <!-- Grid container -->
   
@@ -297,7 +298,7 @@
   </div>
 </div>
 <div>
-  <a href="https://api.whatsapp.com/send?phone=51955081075&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=+918157096325&text=Hai we are checking..!" class="float" target="_blank">
     <i class="fa fa-whatsapp my-float"></i>
     </a>
                   </div>
@@ -328,6 +329,7 @@ Designed by
   <!-- whatapp -->
 
 </footer>
+</div>
 <!-- Footer -->
     
 
