--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <span></span>
                 </b>
                 <div id="change-text">
-                    17000 രൂപ മുതൽ എല്ലാത്തരം ഫർണിച്ചറുകളുടെയും വിശാലമായ കളക്ഷൻസ്
+                    8000 രൂപ മുതൽ എല്ലാത്തരം sofa aannu vekkendathu ഫർണിച്ചറുകളുടെയും വിശാലമായ കളക്ഷൻസ്
                 </div>
                 
             </div>
@@ -180,6 +180,7 @@
    
             </div>
         </div>
+      </div>
         <!--Gallery end-->
 
         <!--Contact begin-->
