--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="banner-area">
     <div class="content-area">
       <div class="content">
-        <h1>GALAXY FUNITURE FACTORY</h1>
+        <h1>GALAXY FURNITURE FACTORY</h1>
         <p>The Brand You Trust</p>
         <a href="#second-section">
           <button class="btn">MORE</button>
