--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" src="/images/icon.jpg">
+  <link rel="icon" href="images/logo_icon.png" >
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,7 +45,7 @@
 
     <div class="box">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#c8d8e4" fill-opacity="1"
+        <path fill="#c8d8e4" fill-opacity="0.3"
           d="M0,128L80,149.3C160,171,320,213,480,197.3C640,181,800,107,960,96C1120,85,1280,139,1360,165.3L1440,192L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
 
         </path>
@@ -61,16 +61,21 @@
         </div>
 
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#c8d8e4" fill-opacity="0.3" d="M0,192L48,181.3C96,171,192,149,288,149.3C384,149,480,171,576,186.7C672,203,768,213,864,197.3C960,181,1056,139,1152,122.7C1248,107,1344,117,1392,122.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+
+        </path>
+      </svg>
       <!--svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                 <path fill="#c8d8e4" fill-opacity="1" d="M0,128L80,149.3C160,171,320,213,480,197.3C640,181,800,107,960,96C1120,85,1280,139,1360,165.3L1440,192L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
 
                 </path>
             </!--svg-->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <!--svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#c8d8e4" fill-opacity="1"
           d="M0,288L60,277.3C120,267,240,245,360,224C480,203,600,181,720,192C840,203,960,245,1080,256C1200,267,1320,245,1380,234.7L1440,224L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
         </path>
-      </svg>
+      </!--svg>
       <!--Changing text end-->
     </div>
     <div class="container mt-5 box">
@@ -117,7 +122,7 @@
 
     <!--About begin-->
     <div class="contact-section">
-      <h1>About Us </h1>
+      <h2>ABOUT US</h2>
       <p>Some text about who we are and what we do.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At laboriosam laborum ipsum alias, voluptatum
         accusantium! Omnis nihil obcaecati tempora nesciunt corporis! Laudantium praesentium consectetur, quis ipsam
@@ -221,7 +226,7 @@
 
     <!--Contact begin-->
     <div class="contact-section">
-      <h1>Contact Us </h1>
+      <h2>CONTACT US</h2>
       <p>Some text about who we are and what we do.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At laboriosam laborum ipsum alias, voluptatum
         accusantium! Omnis nihil obcaecati tempora nesciunt corporis! Laudantium praesentium consectetur, quis ipsam
