testing for responsiveness

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <div class="banner-area">
     <div class="content-area">
-      <div class="content">
+      <div class="content col-12 col-md-4 col-lg-3">
         <h1>GALAXY FURNITURE FACTORY</h1>
         <p>The Brand You Trust</p>
         <a href="#second-section">
