Pacebook page added

--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@
               <h5 class="text-uppercase">FACEBOOK</h5>
               <div class="container-fluid">
                 <div class="map-responsive">
-                  <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62691.56812190243!2d76.11132117910158!3d10.870635799999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7c98dce26007f%3A0xc95e4557443b22e8!2sGalaxy%20furniture!5e0!3m2!1sen!2sin!4v1629625061727!5m2!1sen!2sin"
-                    width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                  <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fm.facebook.com%2F107506494987401%2F&tabs&width=600&height=450&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" style="border:none;overflow:hidden;align-items: center;" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+                  </iframe>
+                  
                 </div>
 
               </div>
