--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <!--Contact end-->
 
   </div>
-  <div>
+  <div class="container-fluid m-0 p-0">
     <!-- Footer -->
     <footer class="bg-dark text-center text-white">
       <!-- Grid container -->
@@ -249,26 +249,24 @@
         <!-- Section: Social media -->
         <section class="mb-4">
           <!-- Facebook -->
-          <a class="btn btn-outline-light btn-floating m-1 ic" href="#!" role="button"><i
+          <a class="btn btn-outline-light btn-floating m-1 ic" href="https://www.facebook.com/GalaxyFurnitureFactory.in/" role="button"><i
               class="fab fa-facebook-f"></i></a>
 
           <!-- Google -->
-          <a class="btn btn-outline-light btn-floating m-1 ic" href="#!" role="button"><i class="fab fa-google"></i></a>
+          <a class="btn btn-outline-light btn-floating m-1 ic" href="tel:+918157096325" role="button"><i class="fas fas fa-phone-square-alt"></i></a>
 
           <!-- Instagram -->
           <a class="btn btn-outline-light btn-floating m-1 ic" href="#!" role="button"><i
               class="fab fa-instagram"></i></a>
 
           <!-- whatsapp -->
-          <a class="btn btn-outline-light btn-floating m-1 ic" href="#!" role="button"><i
+          <a class="btn btn-outline-light btn-floating m-1 ic" href="https://api.whatsapp.com/send?phone=+918157096325&text=Hai we are checking..!" role="button"><i
               class="fab fa-whatsapp"></i></a>
         </section>
 
         <section class="mb-4">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
-            repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
-            eum harum corrupti dicta, aliquam sequi voluptate quas.
+            മികവുറ്റത്തും പ്രൌടിയേറിയതുമായ നല്ല ഫർണിച്ചറുകൾക്ക് വേണ്ടി സന്ദർശിക്കുക.
           </p>
         </section>
         <!-- Section: Text -->
@@ -282,28 +280,30 @@
               <h5 class="text-uppercase">ADDRESS</h5>
 
               <address>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis, id sapiente ea veniam fugit labore eos
-                architecto et. Iure ab sapiente impedit debitis neque repellendus hic error distinctio quisquam sint?
+                GALAXY FURNITURE FACTORY,<br>
+                KOPPAM-VALANCHERY ROAD,<br>
+                KOORKAPARAMB,<br>
+                KAIPPURAM,KERALA-679308
               </address>
             </div>
             <!--Grid column-->
 
             <!--Grid column-->
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-              <h5 class="text-uppercase">Links</h5>
+              <h5 class="text-uppercase">TOUCH US</h5>
 
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="#!" class="text-white">Link 1</a>
+                  <a href="#!" class="text-white">+91 999 9988 858</a>
                 </li>
                 <li>
-                  <a href="#!" class="text-white">Link 2</a>
+                  <a href="#!" class="text-white"></a>
                 </li>
                 <li>
-                  <a href="#!" class="text-white">Link 3</a>
+                  <a href="#!" class="text-white"></a>
                 </li>
                 <li>
-                  <a href="#!" class="text-white">Link 4</a>
+                  <a href="#!" class="text-white"></a>
                 </li>
               </ul>
             </div>
