All footer pointers are set...Need to link all links and correct address

--- a/index.html
+++ b/index.html
@@ -294,16 +294,16 @@
 
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="#!" class="text-white">+91 999 9988 858</a>
+                  <a href="#!" class="text-info">+91 999 9988 858</a>
                 </li>
                 <li>
-                  <a href="#!" class="text-white"></a>
+                  <a href="https://www.facebook.com/GalaxyFurnitureFactory.in/" class="text-info">Facebook</a>
                 </li>
                 <li>
-                  <a href="#!" class="text-white"></a>
+                  <a href="#!" class="text-info">Whatsapp</a>
                 </li>
                 <li>
-                  <a href="#!" class="text-white"></a>
+                  <a href="#!" class="text-info">Instagram</a>
                 </li>
               </ul>
             </div>
