--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -123,14 +123,19 @@
 
     <!--About begin-->
     <div class="contact-section">
-      <h2>ABOUT US</h2>
-      <p>Some text about who we are and what we do.</p>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At laboriosam laborum ipsum alias, voluptatum
-        accusantium! Omnis nihil obcaecati tempora nesciunt corporis! Laudantium praesentium consectetur, quis ipsam
-        error incidunt optio recusandae.</p>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, aliquam soluta dolores impedit
-        distinctio, quis adipisci expedita unde possimus id dignissimos voluptas magni, nobis rem repudiandae nemo
-        dolore eius placeat.</p>
+      <h2 style="text-shadow: 2px 2px 3px #7b188f;">ABOUT US</h2>
+      <p>"Home is a place of love"</p>
+      <p>
+        സ്നേഹം ഉള്ളിടത്താണ് വീട് എന്ന് നിങ്ങൾ പറയുന്നു. അത് കൂടുതൽ മുന്നോട്ട് കൊണ്ടുപോകാൻ നിങ്ങളുടെ എല്ലാ ഫർണിച്ചറുകളും വിലമതിക്കാനാവാത്തവിധം നിർമ്മിച്ച ഹൃദയമാണ് വീട് എന്ന് ഞങ്ങൾ പറയുന്നു.
+      </p>
+      <p>
+        2004 മുതൽ ; ഞങ്ങൾ നിങ്ങളുടെ പ്രിയ ഭവനങ്ങളും ഓഫീസ്സുകളും മനോഹരമാക്കുന്നതിൽ എന്നും മുൻപന്തിയിലാണ്. ഫർണിച്ചർ നിർമാണരംഗത്ത് മികച്ച ഉത്പന്നങ്ങൾ കേരളീയ ഹൃദയങ്ങളിൽ എത്തിക്കാനും, തനതായ പ്രൗഡി നിലനിർത്താനും ഞങ്ങൾക്ക് സാധിച്ചിട്ടുണ്ട്. ലോകോത്തര നിലവാരമുള്ള ഫർണിച്ചർ ഉത്പന്നങ്ങൾ നിങ്ങളിലേക്ക് എത്തിക്കുന്നതിൽ ഞങ്ങൾ ഇന്നും വിജയം കൈവരിച്ചുവരുന്നു. ഞങ്ങളുടെ ഈ യാത്ര എന്നും അവിസ്മരണീയമായി തുടരും..
+      </p>
+        
+
+
+
+
     </div>
 
     <!--About end-->
@@ -138,7 +143,7 @@
     <!--Gallery-->
     <div class="box p-5">
       <div class="intro">
-        <h2 class="text-center">GALLERY</h2>
+        <h2 class="text-center" style="text-shadow: 2px 2px 3px #7b188f;">GALLERY</h2>
         <p class="text-center">Check our valuble products.</p>
       </div>
       <div class="row photos">
@@ -227,7 +232,7 @@
 
     <!--Contact begin-->
     <div class="contact-section">
-      <h2>CONTACT US</h2>
+      <h2 style="text-shadow: 2px 2px 3px #7b188f;">CONTACT US</h2>
       <p>Some text about who we are and what we do.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At laboriosam laborum ipsum alias, voluptatum
         accusantium! Omnis nihil obcaecati tempora nesciunt corporis! Laudantium praesentium consectetur, quis ipsam
