--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!--About begin-->
     <div class="contact-section">
       <h2 style="text-shadow: 2px 2px 3px #7b188f;">ABOUT US</h2>
-      <p>"Home is a place of love"</p>
+      <p style="text-shadow: 2px 2px 3px #000;">"Home is a place of love"</p>
       <p>
         സ്നേഹം ഉള്ളിടത്താണ് വീട് എന്ന് നിങ്ങൾ പറയുന്നു. അത് കൂടുതൽ മുന്നോട്ട് കൊണ്ടുപോകാൻ നിങ്ങളുടെ എല്ലാ ഫർണിച്ചറുകളും വിലമതിക്കാനാവാത്തവിധം നിർമ്മിച്ച ഹൃദയമാണ് വീട് എന്ന് ഞങ്ങൾ പറയുന്നു.
       </p>
