Contact us set...Need to link Contacts

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         dolore eius placeat.</p>-->
         <div class="row">
           <div class="col-sm-6">
-            <a class="carda" href="">
+            <a class="carda" href=""style="text-decoration:none;">
               <div class="card text-light bg-info p-3 m-3 cazoom">
                 <div class="card-body">
                   <div>
@@ -259,7 +259,7 @@
           </div>
 
           <div class="col-sm-6">
-            <a href="" class="carda" style="text-decoration: none;">
+            <a href="" class="carda" style="text-decoration:none;">
               <div class="card text-light bg-info p-3 m-3 cazoom">
                 <div class="card-body">
                   <h5 class="card-title">LETS CHAT</h5>
@@ -275,7 +275,7 @@
         
         <div class="row">
           <div class="col-sm-6">
-            <a href="" class="carda" >
+            <a href="" class="carda" style="text-decoration:none;">
               <div class="card text-light bg-info p-3 m-3 cazoom">
                 <div class="card-body">
                   <div>
@@ -291,7 +291,7 @@
             
           </div>
           <div class="col-sm-6">
-            <a href="" class="carda" >
+            <a href="" class="carda" style="text-decoration:none;">
               <div class="card text-light bg-info p-3 m-3 cazoom">
                 <div class="card-body">
                   <h5 class="card-title">MAIL US</h5>
