Some fonts changed

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
           <div class="row">
             <!--Grid column-->
             <div class="col-lg-3 col-md-6 mb-3 mb-md-0">
-              <h5 class="text-uppercase">ADDRESS</h5>
+              <h5 class="text-uppercase" style="font-family: 'Times New Roman', Times, serif;">ADDRESS</h5>
 
               <address>
                 GALAXY FURNITURE FACTORY,<br>
@@ -359,7 +359,7 @@
 
             <!--Grid column-->
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-              <h5 class="text-uppercase">TOUCH US</h5>
+              <h5 class="text-uppercase" style="font-family: 'Times New Roman', Times, serif;">TOUCH US</h5>
 
               <ul class="list-unstyled mb-0">
                 <li>
@@ -380,7 +380,7 @@
 
             <!--Grid column-->
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-              <h5 class="text-uppercase">FACEBOOK</h5>
+              <h5 class="text-uppercase" style="font-family: 'Times New Roman', Times, serif;">FACEBOOK</h5>
               <div class="container-fluid">
                 <div class="map-responsive">
                   <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fm.facebook.com%2F107506494987401%2F&tabs&width=600&height=450&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" style="border:none;overflow:hidden;align-items: center;" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
@@ -394,7 +394,7 @@
 
             <!--MAP column-->
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-              <h5 class="text-uppercase">MAP</h5>
+              <h5 class="text-uppercase" style="font-family: 'Times New Roman', Times, serif;">MAP</h5>
               <div class="container-fluid">
                 <div class="map-responsive">
                   <iframe
